# indent

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
examples/: 2.txt.output  3.txt  3.txt.output  4.txt  4.txt.output  5.txt  5.txt.output  6-strings.txt  6-strings.txt.output  7-unicode.txt  list_without_commas.txt  list_without_commas.txt.output  multiline_with_string.txt  multiline_with_string.txt.output  oneline.txt  oneline.txt.output  string_with_parens.txt  string_with_parens.txt.output  strings-with-newlines.txt  unicode.txt  unicode.txt.output
src/: indenter.rs  main.rs
