[package]
name = "indent"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
nom = "7.1.1"
regex = "1.7.0"

[dev-dependencies]
indoc = "1.0.7"
pretty_assertions = "1.3.0"
